--- a/index.html
+++ b/index.html
@@ -175,8 +175,11 @@
               />
             </div>
             <div>
-              <h2 class="title">Bilingual</h2>
-              <p>I'm a native portuguese speaker with an advanced level of english.</p>
+              <h2 class="title">Polyglot</h2>
+              <p>
+                I'm a native Portuguese speaker with an advanced level of English and currently
+                learning Dutch.
+              </p>
             </div>
           </li>
           <li>
